Added Dockerfile for npm on rpi

--- a/Dockerfile.npm
+++ b/Dockerfile.npm
@@ -3,6 +3,7 @@ FROM guzo/base
 RUN apk update && \
     apk add --no-cache nodejs && \
     npm install -g less && \
+    npm install -g onchange && \
     rm -rf /tmp/npm-*
 
 CMD npm --help
