--- a/Dockerfile.hugo
+++ b/Dockerfile.hugo
@@ -1,16 +1,18 @@
-FROM guzo/base
+FROM alpine
 
-ARG hugo_version=0.55.3
+ARG hugo_version=0.84.3
 ARG hugo_arch=64bit
+
+RUN addgroup --gid 1000 -S appuser && adduser --uid 1000 -S appuser -G appuser
 
 RUN mkdir -p /tmp/scratch && \
     cd /tmp/scratch && \
-    curl -sLO https://github.com/gohugoio/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_Linux-${hugo_arch}.tar.gz && \
-    tar zxvf hugo_${hugo_version}_Linux-${hugo_arch}.tar.gz && \
+    wget -O hugo.tar.gz https://github.com/gohugoio/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_Linux-${hugo_arch}.tar.gz && \
+    tar zxvf hugo.tar.gz && \
     cp hugo /usr/local/bin && \
     cd /tmp/ && \
     rm -rf scratch
 
-USER ian
 EXPOSE 8080
+USER appuser
 CMD hugo --help
