Moved node from alpine to debian

--- a/Dockerfile.npm
+++ b/Dockerfile.npm
@@ -1,6 +1,6 @@
-FROM node:alpine
+FROM node
 
-RUN apk update && \
+RUN apt update && \
     npm install -g less && \
     npm install -g onchange
 
